
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int databuf; } ;
typedef TYPE_1__ stream_bucket_ctx_t ;
struct TYPE_5__ {TYPE_1__* data; } ;
typedef TYPE_2__ serf_bucket_t ;
typedef int apr_status_t ;
typedef int apr_size_t ;


 int serf_databuf_read (int *,int ,char const**,int *) ;

__attribute__((used)) static apr_status_t
stream_bucket_read(serf_bucket_t *bucket, apr_size_t requested,
                   const char **data, apr_size_t *len)
{
  stream_bucket_ctx_t *ctx = bucket->data;

  return serf_databuf_read(&ctx->databuf, requested, data, len);
}
